# MyNanaDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: InitVcpkg.cmake
src/: MyNanaDemo.rc  common.h  easy-log.h  main.cpp  resource.h  resource_manager.cpp  resource_manager.h  single_application.cpp  single_application.h
